--- a/index.html
+++ b/index.html
@@ -16,6 +16,28 @@
             <button class="botao">Ter um cachorro salsicha</button>
             <button class="botao">Ser igual o nerso</button>
             <button class="botao">Atualizar meu currículo</button>
+        <div class="abas-textos">
+            <div class="aba-conteudo ativo">
+                <h3 class="aba-conteudo-titulo-principal">Mensurável do 1º objetivo</h3>
+                <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
+                <div class="contador"></div>
+            </div>
+            <div class="aba-conteudo">
+                <h3 class="aba-conteudo-titulo-principal">Mensurável do 2º objetivo</h3>
+                   <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
+                   <div class="contador"></div>
+                </div>
+                <div class="aba-conteudo">
+                    <h3 class="aba-conteudo-titulo-principal">Mensurável do 3º objetivo</h3>
+                    <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
+                    <div class="contador"></div>
+                </div>
+                <div class="aba-conteudo">
+                    <h3 class="aba-conteudo-titulo-principal">Mensurável do 4º objetivo</h3>
+                    <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
+                    <div class="contador."></div>
+                </div>
+            </div>    
         </div>
     </section>
 </body>
