--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <button class="botao">Cursos na Alura</button>
             <button class="botao">Ter um cachorro salsicha</button>
             <button class="botao">Ser igual o nerso</button>
-            <button class="botao">Atualizar meu currículo</button>
+            <button class="botao">Virar Palmeirense</button>
         <div class="abas-textos">
             <div class="aba-conteudo ativo">
                 <h3 class="aba-conteudo-titulo-principal">Mensurável do 1º objetivo</h3>
